--- a/backend/package.json
+++ b/backend/package.json
@@ -22,7 +22,9 @@
   },
   "dependencies": {
     "@nestjs/common": "^7.5.1",
+    "@nestjs/config": "^0.6.3",
     "@nestjs/core": "^7.5.1",
+    "@nestjs/jwt": "^7.2.0",
     "@nestjs/platform-express": "^7.5.1",
     "@nestjs/typeorm": "^7.1.5",
     "bcryptjs": "^2.4.3",
