--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "leaflet": "^1.7.1",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
+    "vue2-leaflet": "^2.6.0",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
