home view conditional render

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,7 +42,9 @@
     "parserOptions": {
       "ecmaVersion": 2020
     },
-    "rules": {}
+    "rules": {
+      "no-irregular-whitespace": 0
+    }
   },
   "browserslist": [
     "> 1%",
