--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.21.1",
     "leaflet": "^1.7.1",
     "register-service-worker": "^1.7.1",
+    "socket.io": "^4.0.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vue2-leaflet": "^2.6.0",
